# repomapper

./: .about  .build.yaml  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/repomapper/: cli.py  collect.py  config.py  dump.py  ignore.py  tree.py  utils.py
tests/: test_dump.py
